# sdkwork-rpc-framework

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: verify.yml
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
crates/sdkwork-rpc-client/: Cargo.toml
crates/sdkwork-rpc-client/src/: discovery_resolver.rs  lib.rs  load_balance.rs  metadata.rs  resolver.rs  retry_budget.rs  tls.rs  transport.rs  watching_discovery_resolver.rs
crates/sdkwork-rpc-core/: Cargo.toml
crates/sdkwork-rpc-core/src/: bootstrap.rs  caller_context.rs  identity.rs  lib.rs  profile.rs  service_identity.rs  surface.rs
crates/sdkwork-rpc-discovery/: Cargo.toml
crates/sdkwork-rpc-discovery/src/: endpoint.rs  lib.rs  lifecycle.rs  metadata.rs  rpc_metadata.rs
crates/sdkwork-rpc-resilience/: Cargo.toml
crates/sdkwork-rpc-resilience/src/: backoff.rs  circuit_breaker.rs  idempotency.rs  lib.rs  pushback.rs
crates/sdkwork-rpc-server/: Cargo.toml
crates/sdkwork-rpc-server/src/: lib.rs  security.rs
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
scripts/: verify.ps1
specs/: RPC_FRAMEWORK_STANDARD.md  component.spec.json
tests/architecture/: Cargo.toml
tests/architecture/tests/: commerce_bootstrap_e2e.rs  discovery_e2e.rs  framework_alignment.rs  im_bootstrap_e2e.rs  resilience_alignment.rs
