[package]
name = "sdkwork-rpc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork RPC framework core: identity, profiles, and shared primitives."

[lib]
name = "sdkwork_rpc_framework_core"
path = "src/lib.rs"
doctest = false

[dependencies]
sdkwork-rpc-core-rust.workspace = true
sdkwork_utils_rust.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
x509-parser.workspace = true

[dev-dependencies]
rcgen = "0.14"
