[package]
name = "sdkwork-rpc-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork RPC resilience profiles, retry policy, and retry budgets."

[lib]
name = "sdkwork_rpc_resilience"
path = "src/lib.rs"

[dependencies]
sdkwork-rpc-core.workspace = true
tonic.workspace = true
