[package]
name = "sdkwork-rpc-resilience"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork RPC resilience profiles, retry policy, retry budgets, and circuit breakers."

[lib]
name = "sdkwork_rpc_resilience"
path = "src/lib.rs"

[dependencies]
sdkwork-rpc-core.workspace = true
rand.workspace = true
tonic.workspace = true
tracing.workspace = true
