[package]
name = "sdkwork-rpc-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork RPC server lifecycle helpers."

[lib]
name = "sdkwork_rpc_server"
path = "src/lib.rs"

[features]
# Enables TLS/mTLS for the gRPC server. Production deployments SHOULD enable
# this so data-plane traffic is encrypted (RPC_FRAMEWORK_SPEC.md §10).
tls = ["tonic/tls-ring", "tonic/tls-webpki-roots"]

[dependencies]
sdkwork-rpc-core.workspace = true
sdkwork-rpc-discovery.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true

[dev-dependencies]
rcgen = { version = "0.14", features = ["pem"] }
tempfile = "3"
tonic-health = "0.14"
